infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: denilgabani/query

---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      port: 6003
      targetPort: 4003
