infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip
                port:
                  number: 6001
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-cluster-ip
                port:
                  number: 6003
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comment-cluster-ip
                port:
                  number: 6002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000
